frontend/test/should_fail/defYield_009b.grg
rule t
{
	def x:Node;
	pp:p();
	
	modify {
		pp(yield x);
	}
}

pattern p modify (def x:Node)
{	
	modify {
		y:Node;
		eval { yield x = y; }
	}
}

